--- a/index.html
+++ b/index.html
@@ -2,18 +2,8 @@
 <html lang="fr">
   <head>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link
-      rel="icon"
-      type="images/png"
-      sizes="32x32"
-      href="/assets/images/logo1.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/images/logo1.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,7 +11,6 @@
     <title>Météo par bruno</title>
     <meta name="title" content="Météo par bruno" />
     <meta name="description" content="Météo par bruno est fait par bruno" />
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -124,8 +113,8 @@
                 rel="noopener"
               >
                 <img
-                  src="./assets/images/openweather.png"
-                  width="150"
+                  src="./assets/images/logo1.png"
+                  width="30"
                   height="30"
                   loading="lazy"
                   alt="OpenWeather"
